# axum-htmx-maud

./: Cargo.toml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: main.rs  routers.rs  startup.rs
src/routes/: subscription.rs
tests/: check_health.rs
