[package]
name = "axum-htmx-maud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
config = "0.14.0"
serde = { version = "1.0.199", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
reqwest = "0.12.4"
